# expy

./: .env.cluster  .env.local  .env.training  .gitignore  README.md  config.yaml  pyproject.toml
src/experiment_handling/: config_loader.py  experiment.py
src/experiment_handling/wandb/: dummy_run.py
src/expy/: enivronment_loader.py  io.py
src/expy/core/: __init__.py  cli.py  config_loader.py  experiment.py  io.py
src/expy/distributed/: __init__.py  rank_zero.py
src/expy/wandb/: __init__.py  manager.py
tests/: test_config_loader.py  test_environment_loader.py  test_main.py  test_wandb.py
